--- a/SuperMarket Management System/nbproject/project.properties
+++ b/SuperMarket Management System/nbproject/project.properties
@@ -34,10 +34,12 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/SuperMarket_Management_System
 excludes=
 file.reference.jcalendar-1.4.jar=../../../Downloads/jcalendar-1.4.jar
+file.reference.mysql-connector-j-9.0.0.jar=..\\..\\..\\Downloads\\mysql-connector-j-9.0.0 (1)\\mysql-connector-j-9.0.0\\mysql-connector-j-9.0.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.jcalendar-1.4.jar}
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.mysql-connector-j-9.0.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
